--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+.cust-pad{
+  padding: 2em 0 2em 0;
+}
+
 .navbar {
   padding: 2em 0 2em 0;
   background-color: #000;
@@ -19,4 +23,26 @@
 
 .welcome {
   background-color: #696969;
+}
+
+.feature {
+  background-color: gray;
+}
+
+.about {
+  padding: 4em 0 4em 0;
+}
+
+.hackpoly {
+  background-image: url('http://www.hackpoly.com/assets/grey_@2X-b0e4978256086c7c2f4fa0cd72a44934.png');
+  font-size: 1.5em;
+}
+
+.events {
+  padding: 4em 0 4em 0;
+}
+
+.footer {
+  background-color: #000;
+  color: white;
 }
