--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .cust-pad {
-  padding: 2em 0 2em 0;
+  padding: 2em 1em 2em 1em;
 }
 
 .navbar {
@@ -24,8 +24,7 @@ body {
   background-position: center center;
   background-size: cover;
   padding: 150px 0 150px 0;
-  /*height: 100%;*/
-} .jumbotron h2 {
+} .jumbotron h1 {
   color: #fff;
 }
 
@@ -39,7 +38,7 @@ body {
 }
 
 .about {
-  padding: 4em 0 4em 0;
+  padding: 4em 1em 4em 1em;
 }
 
 .hackpoly {
