--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.btn-primary {
+  background-color: #404040;
+  border: 0;
+  text-transform: uppercase;
+} .btn-primary:hover {
+  background-color: grey;
+}
 body {
   font-family: 'Open Sans', sans-serif;
   padding-top: 80px;
@@ -31,19 +38,10 @@ body {
 } .jumbotron h1 {
   color: #fff;
   margin-bottom: 1em;
-} .jumbotron .overlay {
-  position: absolute;
-  left: 0; top: 0;
-  height: 100%;
-  width: 100%;
-  background-color: black;
-  opacity: .3;
-} .jumbotron .container {
-  position: relative;
 }
 
 .welcome {
-  background-color: #696969;
+  background-color: black;
   color: white;
 }
 
