--- a/style.css
+++ b/style.css
@@ -65,6 +65,10 @@ body {
   background-image: url('http://www.hackpoly.com/assets/grey_@2X-b0e4978256086c7c2f4fa0cd72a44934.png');
   font-size: 1.5em;
 }
+.bsc {
+  background-color: green;
+  font-size: 1.5em;
+}
 
 .events {
   padding: 4em 0 4em 0;
