--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
 
 .contact {
   background-color: #404040;
-  color: white;
+  color: #fff;
 } .contact a {
   padding: 0 1em 0 1em;
   color: white;
