--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+.btn-primary {
+  text-transform: uppercase;
+}
 .bsc .btn-primary {
   background-color: #404040;
   border: 0;
@@ -63,15 +66,14 @@ body {
 }
 
 .events {
+  font-size: 160%;
   padding: 4em 0 4em 0;
   background-color: black;
   color: white;
 }
 .events dt {
-  float: left;
 }
 .events dd {
-  text-align: left;
 }
 
 .contact {
