--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
-  padding-top: 79px;
 }
 
 .cust-pad {
@@ -19,8 +18,8 @@ body {
 }
 
 .navbar {
-  padding: 2em 0 1.5em 0;
-  background-color: #000;
+  /*padding: 2em 0 1.5em 0;*/
+  background-color: rgba(241, 240, 238, 0.0);
   text-transform: uppercase;
 } .navbar .navbar-header {
   margin-left: 0.5em;
@@ -28,9 +27,9 @@ body {
   max-width: 200px;
 } .navbar a {
   padding-left: 1em;
-  color: white;
+  color: #fff;
 } .navbar .fa-bars {
-  color: white;
+  color: #fff;
   font-size: 2em;
   margin-left: -2em;
 } .navbar a:hover {
@@ -42,12 +41,17 @@ body {
 
 .carousel img{
   max-width: 100%;
+  position: static;
 } .carousel h3 {
   color: #fff;
   margin-bottom: 5%;
 }
 
-.hackpoly-caption h3 {
+.events {
+  padding: 3em 0 5em 0;
+} 
+
+.events-caption h3 {
   color: black;
 }
 
@@ -59,28 +63,7 @@ body {
   padding: 5em 1em 5em 1em;
 }
 
-.hackpoly {
-  background-image: url('images/grey_@2X-b0e4978256086c7c2f4fa0cd72a44934.png');
-  font-size: 1.5em;
-}
-.bsc {
-  background-image: url('images/bsc-bg.png');
-  font-size: 1.5em;
-  color: white;
-}
-
-.events {
-  font-size: 160%;
-  padding: 2em 0 2em 0;
-  background-color: black;
-  color: white;
-}
-.events dt {
-}
-.events dd {
-}
-
-.contact {
+/*.contact {
   background-color: #404040;
   color: #fff;
 } .contact a {
@@ -88,7 +71,7 @@ body {
   color: white;
 } .contact a:hover {
   color: #337ab7;
-}
+}*/
 
 .footer {
   background-color: #000;
@@ -99,10 +82,40 @@ body {
 .feature {
   background-color: black;
 }
+
+#square1 {
+  width: 100%;
+  height: 400px;
+  box-shadow: 5px 5px 5px #888888;
+  background-color: black;
+  color: white;
+} #square1 a {
+  padding: 0 5px 0 5px;
+  color: white;
+} #square1 a:hover {
+  color: #337ab7;
+}
+
+#square {
+  width: 100%;
+  height: 400px;
+  box-shadow: 5px 5px 5px #888888;
+  background-image: url('images/grey_@2X-b0e4978256086c7c2f4fa0cd72a44934.png');
+}
+
+#square2 {
+  width: 100%;
+  height: 400px;
+  background-image: url('images/bsc-bg.png');
+  box-shadow: 5px 5px 5px #888888;
+  color: white;
+}
+
+
 .four-pts {
   padding-top: 3em;
   min-height: 20em;
-  color: white;
+  color: #fff;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
