--- a/index.css
+++ b/index.css
@@ -1,5 +1,47 @@
+#home {
+  background: white;
+    color:black;
+}
+@font-face {
+  font-family: 'geometos';
+  src: url("/fonts/Geometos.ttf")format("truetype");
+}
+@font-face {
+  font-family: 'porter';
+  src: url("/fonts/Porter Bold.ttf")format("truetype");
+}
+@font-face {
+  font-family: 'bebas';
+  src: url("/fonts/BebasKai-Regular.otf")format("opentype");
+}
 .btn-primary {
   text-transform: uppercase;
+}
+.btn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  -webkit-box-shadow: 1px 1px 3px #666666;
+  -moz-box-shadow: 1px 1px 3px #666666;
+  box-shadow: 1px 1px 3px #666666;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+    font-family: "porter";
+    letter-spacing: 2px;
+    margin-top:20px;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  text-decoration: none;
 }
 .bsc .btn-primary {
   background-color: #404040;
@@ -9,8 +51,9 @@
   background-color: grey;
 }
 
+
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .cust-pad {
@@ -27,6 +70,7 @@ body {
   max-width: 200px;
 } .navbar a {
   padding-left: 1em;
+  letter-spacing: 3px;
   color: #fff;
 } .navbar .fa-bars {
   color: #fff;
@@ -38,13 +82,29 @@ body {
  } .navbar img {
     margin-bottom: -2.5em;
  }
+#home{
+   color: black;
+   background-color: black; 
+}
 
-.carousel img{
+.image{
+  position: relative;
+}
+
+.splash img{
   max-width: 100%;
   position: static;
-} .carousel h3 {
+} 
+.idea{
+  position: absolute;
+  z-index: 1;
+  float:left;
   color: #fff;
-  margin-bottom: 5%;
+  top: 22%; 
+  left: 25%;
+  font-family: 'bebas', sans-serif;
+  font-size: 100px;
+  
 }
 
 .events {
@@ -61,6 +121,20 @@ body {
 
 .about {
   padding: 5em 1em 5em 1em;
+}
+.about h2{
+  font-family: 'bebas', sans-serif;
+    font-size: 45px;
+    letter-spacing: 3px;
+}
+.about p{
+    padding: 20px;
+    font-size: 18px;
+    font-style: italic;
+    letter-spacing: 2px;
+    border-left: solid 3px #3498db;
+    text-align: left;
+    line-height: 1.5;
 }
 
 /*.contact {
@@ -81,6 +155,16 @@ body {
 /* Four main points thing */
 .feature {
   background-color: black;
+  color: white;
+}
+.feature h2{
+  font-family: 'bebas';
+  font-size: 45px;
+  letter-spacing: 2px;
+}
+.feature .info{
+    font-size: 15px;
+    line-height: 1.8;
 }
 
 #square1 {
@@ -144,6 +228,17 @@ body {
   background-image: url('images/network.jpg');
 }
 /* End four main points thing */
+.footer .copyright p{
+ letter-spacing: 3px; 
+ position: relative;
+    margin:0px;
+    float: left;
+}
+.footer a{
+ float:right;
+ color: white;
+ padding: 10px;
+}
 /* contact page */
 .eboard-members {
   margin-top: 35px;
