--- a/about.css
+++ b/about.css
@@ -51,6 +51,8 @@ body {
 .key{
     color:#222;
     font-style: italic;
+    font-weight: 600;
+    font-weight: 600;
 }
 .mission,
 .ourteam {
@@ -121,7 +123,7 @@ body {
   text-align: center;
   color: #fff;
   font-size: 22px;
-  font-family: 'pixelmix';
+  font-family: 'Lato';
   letter-spacing: 1px;
   visibility: hidden;
 }
