--- a/events.css
+++ b/events.css
@@ -155,6 +155,19 @@ body {
   cursor: pointer;
   z-index: 999999;
 }
+.top{
+ padding: 20px; 
+ left: 680px;
+ color: #fff;
+ font-size: 30px;
+  font-family: 'bebas', sans-serif;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  z-index: 1;
+  text-align: center;
+  position: absolute;
+}
 @media only screen and (max-width: 992px) {
   .event {
     height: 325px;
