officer pics + calendar

--- a/css/about.css
+++ b/css/about.css
@@ -53,7 +53,7 @@ body {
   font-family: 'porter';
 }
 .key{
-    color:#222;
+    color:#fff;
     font-style: italic;
     font-weight: 600;
     font-weight: 600;
